# ants

./: .env.example  .gitignore  README.md
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/antfarm/: __init__.py  bifurcation.py  config.py  contracts.py  env.py  policies.py  regimes.py  server.py  snapshot.py
backend/antfarm/learning/: __init__.py  base.py  rewards.py  tabular.py  trainer.py
backend/tests/: smoke.py  test_bifurcation.py  test_characterization.py  test_config.py  test_env.py  test_learning.py  test_nutrient.py  test_regimes.py  test_server.py
ci/: README.md  ci.yml
docs/: ARCHITECTURE.md
docs/lessons/: lesson-0-the-world.md  lesson-0.5-ecology.md  lesson-0.6-nutrient-loop.md  lesson-1-tabular-q.md
docs/review-responses/: 2026-06-14-gpt-5.5-refactor.md  2026-06-14-gpt-5.5.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: AntCanvas.tsx  App.tsx  Bifurcation.tsx  Controls.tsx  LearnerPanel.tsx  Metrics.tsx  presets.ts  styles.css  types.ts  useSim.ts
original_code/: actcost.m  alldead.m  anim_rad.m  ant.m  ant2.m  antdraw.m  antexec.m  chckmask.m  doacts.m  docomm.m  geneacts.m  geneloop.m  genepick.m  genexec.m  getstate.m  guifix.m  incircle.m  initants.m  initstat.m  legal.m  mainloop.m  makefood.m  newants.m  newfood.m  oriented.m  pickacts.m  policy.m  qex.m  qnewants.m  qrand.m  qrandom.m  qtoggle.m  qttemp.mat  qupdate.m  randacts.m  readme.txt  samepl2.m  sameplac.m  vi.his
original_code/lostark/: actcost.m  alldead.m  antdraw.m  antexec.m  chckmask.m  distan.m  qex.m  (+21 more)
(+28 files in other folders)
